# field

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
.github/workflows/: ci.yml  docs-coverage.yml
crates/field_amr/: Cargo.toml  README.md
crates/field_amr/src/: lib.rs
crates/field_core/: Cargo.toml  README.md
crates/field_core/src/: component.rs  field_data.rs  halo.rs  hierarchy.rs  lib.rs  mesh.rs  operator.rs  partition.rs  plugin.rs  schedule.rs  uniform.rs
crates/field_core/tests/: derive.rs  solve_primitives.rs
crates/field_derive/: Cargo.toml  README.md
crates/field_derive/src/: lib.rs
crates/field_p4est/: Cargo.toml  README.md  build.rs
crates/field_p4est/csrc/: shim.c  shim.h
crates/field_p4est/src/: forest.rs  lib.rs  mesh.rs  partition.rs
crates/field_p4est/tests/: forest_mesh.rs  partition_directory.rs
crates/field_transfer/: Cargo.toml  README.md
crates/field_transfer/src/: lib.rs
examples/: VALIDATION.md
examples/fem_poisson/: .gitignore  Cargo.toml  README.md  config.toml  main.rs  sweep.py
examples/lbm_poiseuille/: Cargo.toml  README.md  config.toml  main.rs  sweep.py
examples/matrixfree_laplacian/: Cargo.toml  main.rs
examples/mpm_elastic_bar/: .gitignore  Cargo.toml  README.md  config.toml  main.rs  sweep.py
examples/p4est_crossrank_halo/: Cargo.toml  README.md  config.toml  main.rs  sweep.py
