[workspace]
resolver = "2"
members = [
    "crates/field_core",
    "crates/field_derive",
    "crates/field_amr",
    "crates/field_p4est",
    "crates/field_transfer",
    "examples/fem_poisson",
    "examples/lbm_poiseuille",
    "examples/matrixfree_laplacian",
    "examples/mpm_elastic_bar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/field"

# Local path dependencies on the GRASS framework (sibling checkout). Mirrors how
# DIRT path-patches SOIL during local development.
[workspace.dependencies]
field_derive = { path = "crates/field_derive" }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_derive = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_mpi = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_io = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
